# backend/src/quotes/routes/auth.py
@@ -1,24 +1,40 @@
+import datetime
+
 from flask import Blueprint, jsonify, request
-from quotes.models import User
+from quotes.models.auth import User, db
+from quotes.utils import token_required
+from werkzeug.security import check_password_hash, generate_password_hash
 
 bp = Blueprint("auth", __name__)
 
 
-# @bp.route("/register", methods=["POST"])
-# def register():
-#     data = request.get_json()
-#     username = data.get("username")
-#     # password = data.get("password")
-#     role = data.get("role", "user")
-
-#     if User.query.filter_by(username=username).first():
-#         return jsonify({"message": "Username already exists"}), 400
-
-#     hashed_password = ""
-#     new_user = User(username=username, password=hashed_password, role=role)
-#     db.session.add(new_user)
-#     db.session.commit()
-#     return jsonify({"message": "User registered"}), 201
+@bp.route("/register", methods=["POST"])
+def register():
+    username = request.json.get("username")
+    password = request.json.get("password")
+    # email = request.json.get("email")
+    if not username or not password:
+        return (
+            jsonify(
+                {
+                    "error": "Missing required fields",
+                    "request_fields": {
+                        "username": f"{username}",
+                        "password": f"{password}",
+                        "email": "",
+                    },
+                }
+            ),
+            400,
+        )
+    if User.query.filter_by(username=username).first():
+        return jsonify({"error": "Username already exists"}), 400
+    hashed_password = generate_password_hash(password)
+    new_user = User(username=username, password=hashed_password)
+    new_user.generate_token()
+    db.session.add(new_user)
+    db.session.commit()
+    return jsonify({"message": "User registered successfully"}), 201
 
 
 @bp.route("/login", methods=["POST"])
@@ -26,13 +42,26 @@ def login():
     username = request.json.get("username")
     password = request.json.get("password")
     user = User.query.filter_by(username=username).first()
-    if user and user.password == password:
-        token = user.generate_token()
-        return jsonify({"access_token": token}), 200
+    if user and check_password_hash(user.password, password):
+        user.generate_token()
+        db.session.commit()
+        return jsonify({"access_token": user.token}), 200
     return jsonify({"error": "Invalid credentials"}), 401
 
 
+@bp.route("/logout", methods=["POST"])
+@token_required
+def logout(user):
+    user.token = ""
+    user.token_expiry = datetime.datetime.now() - datetime.timedelta(
+        seconds=-2
+    )
+    db.session.commit()
+    return jsonify({"message": "Logged out successfully."}), 200
+
+
 @bp.route("/protected", methods=["POST"])
+@token_required
 def check_protected():
 
     token = request.headers.get("Authorization")
